--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(file_compression_cpp main.cpp Huffman.cpp Huffman.h MCU.cpp MCU.h JPEG.cpp JPEG.h TIFF.cpp TIFF.h QuantisationTable.cpp QuantisationTable.h
         ByteReading.cpp
-        ByteReading.h)
+        ByteReading.h
+        BitReader.cpp
+        BitReader.h)
